--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Build and Push Docker Image
       run: |-
-        docker build -t gcr.io/$PROJECT_ID/$DOCKER_IMAGE_NAME:$GITHUB_SHA ./backend
+        docker build -t gcr.io/$PROJECT_ID/$DOCKER_IMAGE_NAME:$GITHUB_SHA .
         docker push gcr.io/$PROJECT_ID/$DOCKER_IMAGE_NAME:$GITHUB_SHA
 
     - name: Deploy to GCE
